Fix text overflow bug

--- a/src/public/chat/style.css
+++ b/src/public/chat/style.css
@@ -264,7 +264,8 @@ img {
 
 .channelBox {
     display: none;
-    background-image: var(--chatBackground)
+    background-image: var(--chatBackground);
+    overflow: hidden scroll;
 }
 
 /*Mensaje*/
@@ -304,10 +305,11 @@ img {
     width: 100%;
     flex-grow: 1;
     display: flex;
+    flex-direction: column;
     min-height: 40px;
-    align-items: center;
     word-wrap: break-word;
 }
+
 
 .message .date {
     width: 100%;
